--- a/action.yml
+++ b/action.yml
@@ -282,7 +282,7 @@ runs:
             if [ -f KernelSU/kernel/Kconfig ]; then
                 echo "KernelSU has been initialized,skipped."
             else
-                echo "Kernel: version: $VERSION.$PATCHLEVEL.$SUBLEVEL"
+                echo "Kernel version: $VERSION.$PATCHLEVEL.$SUBLEVEL"
                 if [ -f nongki.txt ]; then
                     printf "Warning: The KernelSU version you selected was detected to be ${{ inputs.ksu-version }}, but KernelSU has dropped support for the non-gki kernel since 0.9.5. \n This will force switch to v0.9.5.\n"
                     export KVER=v0.9.5
