--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,6 +34,7 @@ jobs:
           aosp-clang: true
           ksu: true
           ksu-version: main
+          ksu-url: https://github.com/NekoSekaiMoe/test
           android-version: 12
           aosp-clang-version: r383902
           disable-lto: true
