actions: fix(3rd clang): fix clang path
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/action.yml
+++ b/action.yml
@@ -200,6 +200,9 @@ runs:
              else
                  git clone "$OTHER_CLANG_URL" $HOME/clang --depth=${{ inputs.depth }} -b ${{ inputs.other-clang-branch }}
              fi
+             if [ ! -d $HOME/clang/bin/ ]; then
+                 mv $HOME/clang/*/* $HOME/clang/
+             fi
          fi
          echo "::endgroup::"
 
