Update common.yml[skip ci]
Signed-off-by: dabao1955 <dabao1955@163.com>

--- a/.github/ISSUE_TEMPLATE/common.yml
+++ b/.github/ISSUE_TEMPLATE/common.yml
@@ -3,6 +3,7 @@ description: "(⋟﹏⋞) I have some question."
 title: "[common]: "
 labels: ["Not important"]
 
+body:
   - type: textarea
     id: description
     attributes:
