actions: set android-version default input to empty
- fix error when downloading clang if user want to use latest aosp-clang.

Signed-off-by: Vayruz Rafli <mikhailovnakowalski@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ inputs:
   android-version:
     description: 'Android version.'
     required: true
-    default: 12
+    default: ""
   ksu:
     description: 'KernelSU function support'
     required: false
