Fix download clang issues
https://github.com/frstprjkt/kernel_xiaomi_sm6115/actions/runs/12030625992/job/33538419893#step:2:562
(fixed by "[actions: set android-version input required to
false](https://github.com/frstprjkt/kernel_build_action/commit/de5e9c05586598a498a8e5a676c8b9b591ce949c)")

https://github.com/frstprjkt/kernel_xiaomi_sm6115/actions/runs/12030433993/job/33537831958#step:2:596
(fixed by "[actions: fix mkdir error when using 3rd
clang](https://github.com/frstprjkt/kernel_build_action/commit/4725e9a9f5872a77f5d1564c6275de515792df4e)")

---------

Signed-off-by: Vayruz Rafli <mikhailovnakowalski@gmail.com>

--- a/action.yml
+++ b/action.yml
@@ -41,7 +41,7 @@ inputs:
   android-version:
     description: 'Android version.'
     required: true
-    default: 12
+    default: ""
   ksu:
     description: 'KernelSU function support'
     required: false
@@ -192,11 +192,11 @@ runs:
              export OTHER_CLANG_URL=${{ inputs.other-clang-url }}
              if [[ "$OTHER_CLANG_URL" == *'.tar.gz' ]]; then
                  aria2c -o clang.tar.gz "$OTHER_CLANG_URL"
-                 mkdir clang
+                 mkdir $HOME/clang -p -v
                  tar -C $HOME/clang/ -zxvf clang.tar.gz
              elif [[ "$OTHER_CLANG_URL" == *'.zip' ]]; then
                  aria2c -o clang.zip "$OTHER_CLANG_URL"
-                 mkdir clang
+                 mkdir $HOME/clang -p -v
                  unzip clang.zip -d $HOME/clang/
              else
                  git clone "$OTHER_CLANG_URL" $HOME/clang --depth=${{ inputs.depth }} -b ${{ inputs.other-clang-branch }}
