--- a/action.yml
+++ b/action.yml
@@ -223,26 +223,12 @@ runs:
                      ;;
              esac
          }
-         
+
          if [ ${{ inputs.aosp-clang }} = false ] && [ ${{ inputs.android-ndk }} = false ]; then
              echo "::group:: Downloading 3rd clang"
              export OTHER_CLANG_URL=${{ inputs.other-clang-url }}
-<<<<<<< HEAD
-             if [[ "$OTHER_CLANG_URL" == *'.tar.gz' ]]; then
-                 aria2c -o clang.tar.gz "$OTHER_CLANG_URL"
-                 mkdir $HOME/clang -p -v
-                 tar -C $HOME/clang/ -zxvf clang.tar.gz
-             elif [[ "$OTHER_CLANG_URL" == *'.zip' ]]; then
-                 aria2c -o clang.zip "$OTHER_CLANG_URL"
-                 mkdir $HOME/clang -p -v
-                 unzip clang.zip -d $HOME/clang/
-             else
-                 git clone "$OTHER_CLANG_URL" $HOME/clang --depth=${{ inputs.depth }} -b ${{ inputs.other-clang-branch }}
-             fi
-=======
-             mkdir -p -v $HOME/clang 
+             mkdir -p -v $HOME/clang
              download_and_extract "$OTHER_CLANG_URL" "clang" "$HOME/clang" "${{ inputs.other-clang-branch }}"
->>>>>>> 1350313 (Add 3rd-gcc.yml)
              if [ ! -d $HOME/clang/bin/ ]; then
                  mv $HOME/clang/*/* $HOME/clang/
              fi
@@ -343,35 +329,35 @@ runs:
          fi
 
          cd kernel/${{ inputs.kernel-dir }}
-         if ! grep -qsi "LD *= *ld.lld" Makefile && [ -f "$HOME/clang/bin/ld" ]; then
-             rm -f "$HOME/clang/bin/ld"
-         fi
-
          if [ ! -z ${{ inputs.other-gcc64-url }} ] && [ ! -z ${{ inputs.other-gcc32-url }} ]; then
-             declare -A sub_dirs=(
+             declare -A SUB_DIRS=(
                  ["$HOME/gcc-64"]="aarch64-linux-android"
                  ["$HOME/gcc-32"]="arm-linux-androideabi"
              )
-             for gcc_dir in "$HOME/gcc-64" "$HOME/gcc-32"; do
-                 find "$gcc_dir"/*/*/bin -type d -exec sh -c 'mv "$(dirname "{}")"/* "$gcc_dir"/' _ {} \; -quit || true 2>/dev/null
-                 sub_dir="${sub_dirs[$gcc_dir]}"
-                 if [ ! -d "$gcc_dir/$sub_dir" ]; then
-                     for file in "$gcc_dir/bin"/*; do
-                         file_name=$(basename "$file")
-                         matched_dir=""
-                         for folder in $(find "$gcc_dir" -mindepth 1 -maxdepth 1 -type d | sort -r); do
-                             folder_name=$(basename "$folder")
-                             [[ "$file_name" == "$folder_name"* ]] && matched_dir="$folder_name" && break
+             for GCC_DIR in "$HOME/gcc-64" "$HOME/gcc-32"; do
+                 find "$GCC_DIR"/*/*/bin -type d -exec sh -c 'mv "$(dirname "{}")"/* "$GCC_DIR"/' _ {} \; -quit > /dev/null 2>&1 || true
+                 SUB_DIR="${SUB_DIRS[$GCC_DIR]}"
+                 if [ ! -d "$GCC_DIR/$SUB_DIR" ]; then
+                     for FILE in "$GCC_DIR/bin"/*; do
+                         FILE_NAME=$(basename "$FILE")
+                         MATCHED_DIR=""
+                         for FOLDER in $(find "$GCC_DIR" -mindepth 1 -maxdepth 1 -type d | sort -r); do
+                             FOLDER_NAME=$(basename "$FOLDER")
+                             [[ "$FILE_NAME" == "$FOLDER_NAME"* ]] && MATCHED_DIR="$FOLDER_NAME" && break
                          done
-                         [ -n "$matched_dir" ] && case "$gcc_dir" in
-                             "$HOME/gcc-64") gcc64="$matched_dir" ;;
-                             "$HOME/gcc-32") gcc32="$matched_dir" ;;
+                         [ -n "$MATCHED_DIR" ] && case "$GCC_DIR" in
+                             "$HOME/gcc-64") GCC64="$MATCHED_DIR" ;;
+                             "$HOME/gcc-32") GCC32="$MATCHED_DIR" ;;
                          esac
                      done
                  fi
              done
          fi
-         
+
+         if [ -f "$HOME/clang/bin/ld" ] || [ -f "$HOME/gcc-64/bin/${GCC64}-ld" ] || [ -f "$HOME/gcc-32/bin/${GCC32}-ld" ]; then
+             rm -f "$HOME/clang/bin/ld" "$HOME/gcc-64/bin/${GCC64}-ld" "$HOME/gcc-32/bin/${GCC32}-ld"
+         fi
+
          function version_gt() { test "$(echo -e "$1\n$2" | sort -V | tail -n1)" == "$1"; }
          VERSION=$(grep -E '^VERSION = ' Makefile | awk '{print $3}')
          PATCHLEVEL=$(grep -E '^PATCHLEVEL = ' Makefile | awk '{print $3}')
@@ -474,7 +460,7 @@ runs:
              echo "::endgroup::"
          fi
 
-          echo "::group:: Building Kernel with selected cross compiler"
+         echo "::group:: Building Kernel with selected cross compiler"
          mkdir out -p -v
          COMMAND="make -j$(nproc --all) ${{ inputs.config }} ARCH=${{ inputs.arch }} all ${{ inputs.extra-cmd }} O=out"
          if [ -d $HOME/clang ]; then
@@ -484,13 +470,13 @@ runs:
               COMMAND+=" CLANG_PATH=$HOME/android-ndk-${{ inputs.android-ndk-version }}/toolchains/llvm/prebuilt/linux-x86_64"
          fi
          if [ ${{ inputs.aosp-gcc }} = true ]; then
-            if [ -n "${gcc64}" ] && [ -n "${gcc32}" ]; then
-               COMMAND+=" CROSS_COMPILE=$HOME/gcc-64/${gcc64}/bin/${gcc64}- CROSS_COMPILE_ARM32=$HOME/gcc-32/${gcc32}/bin/${gcc32}- CLANG_TRIPLE=aarch64-linux-gnu-"
-            elif [ -d $HOME/gcc-64 ] && [ -d $HOME/gcc-32 ]; then
-               COMMAND+=" CROSS_COMPILE=$HOME/gcc-64/bin/aarch64-linux-android- CROSS_COMPILE_ARM32=$HOME/gcc-32/bin/arm-linux-androideabi- CLANG_TRIPLE=aarch64-linux-gnu-"
-            fi
+             [ -n "${GCC64}" ] && CROSS_COMPILE="$HOME/gcc-64/bin/${GCC64}-"
+             [ -z "${GCC64}" ] && CROSS_COMPILE="$HOME/gcc-64/bin/aarch64-linux-android-"
+             [ -n "${GCC32}" ] && CROSS_COMPILE_ARM32="$HOME/gcc-32/bin/${GCC32}-"
+             [ -z "${GCC32}" ] && CROSS_COMPILE_ARM32="$HOME/gcc-32/bin/arm-linux-androideabi-"
+             COMMAND+=" CROSS_COMPILE=${CROSS_COMPILE} CROSS_COMPILE_ARM32=${CROSS_COMPILE_ARM32} CLANG_TRIPLE=aarch64-linux-gnu-"
          elif [ ${{ inputs.android-ndk }} = true ]; then
-           COMMAND+=" CROSS_COMPILE=$CLANG_PATH/bin/llvm- CROSS_COMPILE_ARM32=$CLANG_PATH/bin/llvm-"
+             COMMAND+=" CROSS_COMPILE=$CLANG_PATH/bin/llvm- CROSS_COMPILE_ARM32=$CLANG_PATH/bin/llvm-"
          fi
          if [ -d $HOME/clang ]; then
              if [ ${{ inputs.ccache }} = true ]; then
@@ -500,25 +486,25 @@ runs:
              fi
          else
              if [ ${{ inputs.ccache }} = true ]; then
-                 if [ -n "${gcc64}" ]; then
-                     COMMAND+=" CC='ccache $HOME/gcc-64/${gcc64}/bin/${gcc64}-gcc'"
-                 elif [ -d $HOME/gcc-64 ]; then
+                 if [ -n "${GCC64}" ]; then
+                     COMMAND+=" CC='ccache $HOME/gcc-64/bin/${GCC64}-gcc'"
+                 elif [ -z "${GCC64}" ]; then
                      COMMAND+=" CC='ccache $HOME/gcc-64/bin/aarch64-linux-android-gcc'"
                  fi
              else
-                 if [ -n "${gcc32}" ]; then
-                     COMMAND+=" CC='ccache $HOME/gcc-32/${gcc32}/bin/${gcc32}-gcc'"
-                 elif [ -d $HOME/gcc-32 ]; then
+                 if [ -n "${GCC32}" ]; then
+                     COMMAND+=" CC='ccache $HOME/gcc-32/bin/${GCC32}-gcc'"
+                 elif [ -z "${GCC32}" ]; then
                      COMMAND+=" CC='ccache $HOME/gcc-32/bin/arm-linux-androidabeihf-gcc'"
                  fi
              fi
          fi
          echo "using command: ${COMMAND}"
-         eval ${COMMAND}
+         ${COMMAND}
          echo "::endgroup::"
 
-         unset USE_CCACHE CLANG_TRIPLE CROSS_COMPILE_ARM32 CROSS_COMPILE CLANG_PATH HOMES KVER COMMAND SWAP_FILE SUBLEVEL PATCHLEVEL VERSION
-         
+         unset USE_CCACHE CLANG_TRIPLE CROSS_COMPILE_ARM32 CROSS_COMPILE CLANG_PATH HOMES KVER COMMAND SWAP_FILE SUBLEVEL PATCHLEVEL VERSION SUB_DIRS GCC_DIR SUB_DIR FILE FILE_NAME MATCHED_DIR FOLDER FOLDER_NAME GCC64 GCC32
+
          if [ ${{ inputs.anykernel3 }} = false ]; then
             echo "::group:: Preparing to Upload boot.img"
             mkdir split
