--- a/action.yml
+++ b/action.yml
@@ -354,8 +354,8 @@ runs:
              done
          fi
 
-         if [ -f "$HOME/clang/bin/ld" ] || [ -f "$HOME/gcc-64/bin/${GCC64}-ld" ]; then
-             rm -f "$HOME/clang/bin/ld" "$HOME/gcc-64/bin/${GCC64}-ld"
+         if [ -f "$HOME/clang/bin/ld" ] || [ -f "$HOME/gcc-64/bin/${GCC64}-ld" ] || [ -f "$HOME/gcc-32/bin/${GCC32}-ld" ]; then
+             rm -f "$HOME/clang/bin/ld" "$HOME/gcc-64/bin/${GCC64}-ld" "$HOME/gcc-32/bin/${GCC32}-ld"
          fi
 
          function version_gt() { test "$(echo -e "$1\n$2" | sort -V | tail -n1)" == "$1"; }
